[package]
name = "timeman"
authors = ["konkitoman"]
keywords = ["cli", "time", "date", "time-date", "time-date-calculator"]
version = "1.0.0"
edition = "2021"
repository = "https://github.com/konkitoman/TimeMan"
description = "Is a time and date calculator"
license = "MIT"

[[bin]]
name = "tm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "color"] }
